WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
174282
REGRESSION(
r213590
): UI process updates the visible content rects more often than it did in iOS 10
https://bugs.webkit.org/show_bug.cgi?id=174282
Summary
REGRESSION(r213590): UI process updates the visible content rects more often ...
Myles C. Maxfield
Reported
2017-07-07 16:08:28 PDT
REGRESSION(
r213590
): UI process updates the visible content rects more often than it did in iOS 10
Attachments
Patch
(14.37 KB, patch)
2017-07-07 16:11 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(14.40 KB, patch)
2017-07-07 16:12 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2017-07-07 16:11:51 PDT
Created
attachment 314890
[details]
Patch
Myles C. Maxfield
Comment 2
2017-07-07 16:12:13 PDT
Created
attachment 314891
[details]
Patch
Myles C. Maxfield
Comment 3
2017-07-07 16:12:49 PDT
<
rdar://problem/33144344
>
WebKit Commit Bot
Comment 4
2017-07-10 09:17:04 PDT
Comment on
attachment 314891
[details]
Patch Clearing flags on attachment: 314891 Committed
r219293
: <
http://trac.webkit.org/changeset/219293
>
WebKit Commit Bot
Comment 5
2017-07-10 09:17:05 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug